[gd_scene load_steps=5 format=3 uid="uid://b1koydpdgykmw"]

[ext_resource type="PackedScene" uid="uid://bq4pk0kaubxg1" path="res://GLB Models/grenade/grenade.glb" id="1_8ubg5"]
[ext_resource type="Script" path="res://Scripts/weaponClasses/grenade.gd" id="1_sw7dl"]

[sub_resource type="SphereShape3D" id="SphereShape3D_n1ata"]
radius = 0.130155

[sub_resource type="SphereShape3D" id="SphereShape3D_7s7oa"]
radius = 3.32153

[node name="Grenade" type="RigidBody3D" node_paths=PackedStringArray("areaExplosion", "explosionTimer", "rigidBody")]
gravity_scale = 0.0
freeze = true
script = ExtResource("1_sw7dl")
explosionDamage = 16.0
explosionPushForce = 8.0
areaExplosion = NodePath("Area3D")
explosionTimer = NodePath("Timer")
throwDirection = Vector3(0, 0, 3)
throwForce = 10.0
rigidBody = NodePath(".")
damage = 3.0

[node name="grenade" parent="." instance=ExtResource("1_8ubg5")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0377105, 0)
shape = SubResource("SphereShape3D_n1ata")

[node name="Area3D" type="Area3D" parent="."]
monitoring = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_7s7oa")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
